# backtesting-trading-strategies

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/streamlit_app/: app.py
data/raw/: prices.parquet
scripts/: fetch.py  run_bt.py  signals_today.py
trader/: config.py
trader/backtest/: engine.py  metrics.py
trader/datasources/: yfinance_source.py
trader/features/: indicators.py
trader/io/: store.py
trader/signals/: cci.py  combine.py  ott.py  rsi.py  tma.py
