[project]
name = "002-trading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "streamlit>=1.49.1",
    "yfinance>=0.2.65",
]
